# VOP

./: .CMakePresets.json  .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README  README.md  conanfile.txt
dependencies/ObjectiveVulkan/: .clang-format  .gitignore  CMakeLists.txt
dependencies/ObjectiveVulkan/include/ObjectiveVulkan/: buffer.hxx  device.hxx  ehi.hxx  image.hxx  instance.hxx  swapchain.hxx
dependencies/ObjectiveVulkan/include/ObjectiveVulkan/common/: globals.hxx  logging.hxx
dependencies/ObjectiveVulkan/src/: debug.cxx  device.cxx  queue.cxx  surface.cxx  swapchain.cxx
example/: .gitignore  CMakeLists.txt  conanfile.txt  main.cxx
example/assets/shaders/: CMakeLists.txt  shader.vert.glsl
include/ObjectiveVulkan/: memory.hxx
src/: CMakeLists.txt  LayersAndExtensions.cxx  main.cxx  memory.cxx
src/assets/models/: CMakeLists.txt
src/assets/models/rectangle/shaders/: shader.frag
src/assets/shaders/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/include/: ObjectiveVulkan.hxx  buffer.hxx  device.hxx  ehi.hxx  engine.hxx  engine_setup.hxx  example.hxx  image.hxx  instance.hxx  memory.hxx  queue.hxx  renderpass.hxx  setup_engine.hxx  surface.hxx  swapchain.hxx
src/engine/include/ObjectiveVulkan/: ObjectiveVulkan.hxx  example.hxx  queue.hxx  renderpass.hxx  surface.hxx
src/engine/include/common/: globals.hxx
src/engine/src/: EHI.cxx  EHI.hxx  GraphicPipeline.cxx  GraphicPipeline.hxx  LayersAndExtensions.cxx  RHI.cxx  RHI.hxx  buffer.cxx  buffer.hxx  debug.cxx  descriptor.cxx  descriptor.hxx  descriptorPool.cxx  descriptorPool.hxx  descriptorSet.cxx  descriptorSet.hxx  device.cxx  device.hxx  engine  engine.cxx  image.cxx  image.hxx  instance.cxx  instance.hxx  memory.cxx  memory.hxx  model.cxx  model.hxx  pipeline.cxx  pipeline.hxx  platform.hxx  queue.cxx  queue.hxx  renderpass.cxx  renderpass.hxx  sampler.cxx  sampler.hxx  shader.cxx  shader.hxx  shaders.cxx  (+9 more)
src/engine/src/common/: globals.hxx  logging.hxx
src/engine/src/windows/: PlatformDefines.hxx  WindowsPlatform.cxx  WindowsPlatform.hxx
src/render/: CMakeLists.txt
src/render/include/: render.hxx
src/render/src/: render.cxx
