cmake_minimum_required(VERSION 3.5)
project("VulkanObjectiveProject" LANGUAGES CXX VERSION 1.0)

include(GenerateExportHeader)

string(COMPARE EQUAL ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR} VOP_STANDALONE)

option(VOP_BUILD_EXAMPLE "Build VOP example" ${VOP_STANDALONE})

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_COMPILER clang++)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}; ${CMAKE_BINARY_DIR}")

add_subdirectory(src)

if(VOP_BUILD_EXAMPLE)
    add_subdirectory(example)
endif()
file(GLOB_RECURSE OBJECTIVE_VULKAN_HEADER_FILES "include/*.hxx")
set_target_properties(ObjectiveVulkan PROPERTIES PUBLIC_HEADER "${OBJECTIVE_VULKAN_HEADER_FILES}")
install(TARGETS ObjectiveVulkan
        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
        PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ObjectiveVulkan
)